--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,10 @@
         android:screenOrientation="landscape"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.AssistantActivity"></activity>
+        <activity android:name=".activity.AssistantItemActivity"></activity>
+        <activity
+            android:name=".activity.AssistantActivity"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".activity.DetailsActivity"
             android:configChanges="orientation|screenSize|uiMode"
